<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/home" />
    <item
        android:id="@+id/bottom_nav_pending"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/upcoming" />
    <item
        android:id="@+id/bottom_nav_history"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/history" />
    <item
        android:id="@+id/bottom_navigation_appointments"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/pending_appointments" />
    <item
        android:id="@+id/bottom_nav_account"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/account" />
</menu>